# Routes/room.js
@@ -5,7 +5,7 @@ const User  = require('../Models/User');
 const House  = require('../Models/House');
 const Room  = require('../Models/Room');
 var jwt = require('jsonwebtoken');
-const LightSwitch = require('../Models/LightSwitch.js');
+const LightSwitch = require('../Models/Switch.js');
 const Mongoose=require('mongoose');
 var object = require('lodash/fp/object');
 var util = require('../utilities/utilities');
