# Routes/switch.js
@@ -3,7 +3,7 @@ const express = require('express');
 const router =express.Router();
 const User  = require('../Models/User');
 var jwt = require('jsonwebtoken');
-const LightSwitch = require('../Models/LightSwitch.js');
+const Switch = require('../Models/Switch.js');
 const Mongoose=require('mongoose');
 var object = require('lodash/fp/object');
 var util = require('../utilities/utilities');
@@ -13,7 +13,7 @@ const House = require('../Models/House');
 router.post('/AddNew',util.verifyPOSTToken,async (req,res) =>
 {
     /*
-     * #swagger.tags = ["LightSwitch"]
+     * #swagger.tags = ["Switch"]
      */
     try{
         //let user = await User.findOne({ _id : req.userId  }).limit(1);
@@ -22,16 +22,16 @@ router.post('/AddNew',util.verifyPOSTToken,async (req,res) =>
         //console.log("unique UUID ");
         newUUid = randomUUID();
         while(true) {
-            let L = await LightSwitch.findOne({ "UUID" : newUUid });
+            let L = await Switch.findOne({ "UUID" : newUUid });
             if (!L) {
-                console.log("newLightSwitch");
+                console.log("newSwitch");
                 break;
               } else {
                 newUUid = randomUUID();
                 console.log(newUUid);
               }
         }
-        let newLightSwitch = new LightSwitch({
+        let newSwitch = new Switch({
             Name:req.body.Name,
             UUID: newUUid,
             MqttLogin: newUUid,
@@ -39,25 +39,25 @@ router.post('/AddNew',util.verifyPOSTToken,async (req,res) =>
             Mqttpass: RandomString(6)+"!:!"+RandomString(6)
 
         });
-        newLightSwitch = await newLightSwitch.save();
+        newSwitch = await newSwitch.save();
         // add light to user,and room 
         let h;
         let r;
         if (req.user.enabled && req.user.Houses.includes(req.body.houseId)) {
             h = await House.findOne({ "_id" : req.body.houseId });
-            h.Devices.push({"type":"LightSwitch" , "id":newLightSwitch._id });
+            h.Devices.push({"type":"Switch" , "id":newSwitch._id });
         
         } else {
-            x = await LightSwitch.deleteOne({ _id: newLightSwitch._id });
+            x = await Switch.deleteOne({ _id: newSwitch._id });
             res.status(401).send('not your house');
             return ;
         }
         //check room
         if (req.user.enabled && h.Rooms.includes(req.body.roomId)) {
             r = await Room.findOne({ "_id" : req.body.roomId });
-            r.Devices.push({"type":"LightSwitch" , "id":newLightSwitch._id });
+            r.Devices.push({"type":"Switch" , "id":newSwitch._id });
         } else {
-            r = await LightSwitch.deleteOne({ _id: newLightSwitch._id });
+            r = await Switch.deleteOne({ _id: newSwitch._id });
             res.status(401).send('not your room');
             return ;
         }
@@ -65,7 +65,7 @@ router.post('/AddNew',util.verifyPOSTToken,async (req,res) =>
         r=await r.save();
         res.header("Access-Control-Allow-Origin", "*");
         res.header("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept");
-        res.json({status:"ok" , message: 'Switch Added' , LightSwitch:newLightSwitch,house:h,room:r});
+        res.json({status:"ok" , message: 'Switch Added' , Switch:newSwitch,house:h,room:r});
         return ;
     }catch (err) {
         res.header("Access-Control-Allow-Headers", "*");
@@ -73,15 +73,15 @@ router.post('/AddNew',util.verifyPOSTToken,async (req,res) =>
         res.status(400).send('Bad request');
     }
 });
-router.post('/Authlightswitch',async (req,res) =>
+router.post('/AuthSwitch',async (req,res) =>
 {
     /*
-     * #swagger.tags = ["LightSwitch"]
+     * #swagger.tags = ["Switch"]
      */
     /*let user = await User.findOne({ _id : req.userId  }).limit(1);
     if (user.enabled == 1) {*/
     try{
-        let ls = await LightSwitch.findOne({ "UUID" : req.body.client });
+        let ls = await Switch.findOne({ "UUID" : req.body.client });
         //console.log(ls.Active);
         if (!ls) {
             res.header("Access-Control-Allow-Origin", "*");
@@ -90,11 +90,11 @@ router.post('/Authlightswitch',async (req,res) =>
             res.status(404).send('Not found');
             return ;
         }
-        if (! ls.Active) {
+        if (! ls.enabled) {
             res.header("Access-Control-Allow-Origin", "*");
             res.header("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept");
-            console.log("Not Active");
-            res.status(404).send('Not Active');
+            console.log("Not enabled");
+            res.status(404).send('Not enabled');
             return ;
         }
         if (ls.MqttLogin === req.body.login && ls.Mqttpass === req.body.password) {
@@ -120,19 +120,19 @@ router.post('/Authlightswitch',async (req,res) =>
 router.post('/ChangeState',util.verifyPOSTToken,async (req,res) =>
 {
     /*
-     * #swagger.tags = ["LightSwitch"]
+     * #swagger.tags = ["Switch"]
      */
     let user = await User.findOne({ _id : req.userId  }).limit(1);
     if (user.enabled == 1) {
     try{
-        let c = await LightSwitch.findOne({"_id" : Mongoose.Types.ObjectId(req.body.id) } ).limit(1);
+        let c = await Switch.findOne({"_id" : Mongoose.Types.ObjectId(req.body.id) } ).limit(1);
         console.log(c)
         c.state = (c.state === true ) ? c.state = false : c.state = true ;
         console.log(c);
         await c.save();
         res.header("Access-Control-Allow-Origin", "*");
         res.header("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept");
-        res.json({status:"ok" , message: 'State Changed',LightSwitch : c });
+        res.json({status:"ok" , message: 'State Changed',Switch : c });
         return ;
     }catch (err) {
         res.header("Access-Control-Allow-Headers", "*");
